# lab06

./: README.md
.github/workflows/: CI.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt  CPackConfig.cmake
solver_lib/: CMakeLists.txt
